--- a/index.css
+++ b/index.css
@@ -614,6 +614,7 @@ body {
 .grid-container--destination > picture {
   grid-area: image;
   max-width: 60%;
+  align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -716,12 +717,13 @@ body {
       ". image content .";
   }
 
-  .grid-container--destination > picture,
-  .grid-container--crew > picture {
+  .grid-container--destination > picture {
     max-width: 92%;
   }
   .grid-container--crew > picture {
+    grid-column: span 2;
     align-self: end;
+    max-width: 95%;
   }
 
   .destination-meta {
@@ -730,14 +732,15 @@ body {
   }
 
   .grid-container--crew {
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(
+        1rem,
+        1fr
+      );
+    justify-items: start;
     grid-template-areas:
       ". title title ."
       ". content image ."
       ". tabs image .";
-  }
-
-  .grid-container--crew > .dot-indicators {
-    justify-self: start;
   }
 }
 
